--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="/src/index.js"></script>
     <script type="module" src="/src/components/main.jsx"></script>
   </body>
 </html>
