--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Roboto:wght@100;200;300;400;500;700;900&family=Parisienne&family=Syne:wght@400..800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Poiret+One&family=Roboto:wght@100;200;300;400;500;700;900&family=Parisienne&family=Syne:wght@400..800&display=swap"
       rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/b137713270.js"
